# lastfm-fetcher

./: .gitignore  LICENSE  README.md  config.json  convert_csv_to_parquet.py  lastfm.py  main.py  pyproject.toml
