[project]
name = "lastfm-fetcher"
version = "0.1.0"
description = "Fetch and visualize Last.fm listening history"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "pydantic>=2.10.6",
    "polars>=1.26.0",
    "requests>=2.32.3",
    "tqdm>=4.67.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
]
